AX: WebKit does not break AX modality when focus is explicitly moved outside the modal https://bugs.webkit.org/show_bug.cgi?id=246580 rdar://problem/101209793

Reviewed by Chris Fleizach.

https://www.w3.org/TR/wai-aria-1.1/#aria-modal

"If focus moves to an element outside the modal element, assistive technologies SHOULD NOT limit navigation to the modal element."

With this patch, we now follow this recommendation.

* LayoutTests/accessibility/aria-modal-multiple-dialogs-expected.txt:
* LayoutTests/accessibility/aria-modal-multiple-dialogs.html:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::updateCurrentModalNode):
(WebCore::AXObjectCache::updateCurrentModalNodeInternal):
Deleted. Function body moved to a lambda inside updateCurrentModalNode.
(WebCore::AXObjectCache::performDeferredCacheUpdate):
* Source/WebCore/accessibility/AXObjectCache.h:

Canonical link: https://commits.webkit.org/255665@main